--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -49,7 +49,6 @@
   <div  class="m-container-small m-padded-tb-big">
     <div class="ui container">
       <form action="#" method="post" class="ui form">
-
         <div class="required field">
           <div class="ui left labeled input">
             <div class="ui selection compact teal basic dropdown label">
@@ -223,13 +222,14 @@
       on : 'hover'
     });
 
+    //防止type重复
     $('.ui.form').form({
       fields : {
         title : {
-          identifier: 'title',
+          identifier: 'name',
           rules: [{
             type : 'empty',
-            prompt: '标题：请输入博客标题'
+            prompt: '请输入分类名称'
           }]
         }
       }
