--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -11,7 +11,7 @@
 <body>
 
   <!--导航-->
-  <nav th:replace="admin/_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav th:replace="admin/_fragments :: menu(2)"  class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">管理后台</h2>
@@ -39,8 +39,8 @@
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" class="teal active item">发布</a>
-        <a href="#" class="item">列表</a>
+        <a href="#" th:href="@{/admin/types/input}" class="active item">新增</a>
+        <a href="#" th:href="@{/admin/types}" class="teal  item">列表</a>
       </div>
     </div>
   </div>
@@ -48,27 +48,38 @@
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big">
     <div class="ui container">
-      <form action="#" method="post" class="ui form">
-        <div class="field">
+      <form action="#" method="post"  th:object="${type}" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})} "  class="ui form">
+        <input type="hidden" name="id" th:value="*{id}">
+        <div class=" field">
           <div class="ui left labeled input">
             <label class="ui teal basic label">名称</label>
-            <input type="text" name="name" placeholder="分类名称">
+            <input type="text" name="name" placeholder="分类名称" th:value="*{name}" >
           </div>
-
         </div>
 
-
         <div class="ui error message"></div>
-
+        <!--/*/
+        <div class="ui negative message" th:if="${#fields.hasErrors('name')}"  >
+          <i class="close icon"></i>
+          <div class="header">验证失败</div>
+          <p th:errors="*{name}">提交信息不符合规则</p>
+        </div>
+         /*/-->
         <div class="ui right aligned container">
           <button type="button" class="ui button" onclick="window.history.go(-1)" >返回</button>
-          <button class="ui teal button">新增</button>
+          <button class="ui teal submit button">提交</button>
         </div>
 
       </form>
     </div>
   </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
   <!--底部footer-->
@@ -126,10 +137,10 @@
     $('.ui.form').form({
       fields : {
         title : {
-          identifier: 'title',
+          identifier: 'name',
           rules: [{
             type : 'empty',
-            prompt: '标题：请输入博客标题'
+            prompt: '请输入分类名称'
           }]
         }
       }
