--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -3,7 +3,7 @@
 <head th:fragment="head(title)">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title th:replace="${title}">博客详情</title>
+  <title th:replace="${title}">页面名称</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css" th:href="@{/lib/editormd/css/editormd.min.css}">
   <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
@@ -21,8 +21,8 @@
       <div class="right m-item m-mobile-hide menu">
         <div class="ui dropdown  item">
           <div class="text">
-<!--            <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" th:src="@{${session.user.avatar}}">-->
-<!--            <span th:text="${session.user.nickname}">Aaron</span>-->
+            <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" th:src="@{${session.user.avatar}}">
+            <span th:text="${session.user.nickname}">Aaron</span>
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -37,45 +37,33 @@
   </a>
 </nav>
 
-<!--导航-->
-
-
 
 <!--底部footer-->
 <footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
   <div class="ui center aligned container">
     <div class="ui inverted divided stackable grid">
-      <div class="three wide column">
+      <div class="four wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="../static/images/wechat.jpg" th:src="@{/images/wechat.jpg}"  class="ui rounded image" alt="" style="width: 110px">
+            <img src="../static/images/phone.png" th:src="@{/images/phone.png}"  class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-        </div>
-      </div>
-      <div class="three wide column">
+      <div class="six wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
         <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-          <a href="#" class="item m-text-thin">QQ：865729312</a>
+          <a href="#" class="item m-text-thin">Email：3459976576@qq.com</a>
+          <a href="#" class="item m-text-thin">QQ：3459976576</a>
         </div>
       </div>
-      <div class="seven wide column">
+      <div class="six wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
+        <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客，这里会分享关于在学习编程相关的任何内容。</p>
       </div>
     </div>
     <div class="ui inverted section divider"></div>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Lirenmi Designed by Lirenmi</p>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 - <span th:text="${#dates.year(#dates.createNow())}">2017</span>Designed by Aaron</p>
   </div>
-
 </footer>
 
 <th:block th:fragment="script">
@@ -83,6 +71,5 @@
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
   <script src="../../static/lib/editormd/editormd.min.js" th:src="@{/lib/editormd/editormd.min.js}"></script>
 </th:block>
-
 </body>
 </html>
